[Add] kata 9 done